[package]
name = "statsig-wasm"
version = "0.0.1"
edition = "2024"
description = "Wasm bindings for the Statsig JavaScript (Web) SDK"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
